--- a/threads/templates/threads.html
+++ b/threads/templates/threads.html
@@ -19,7 +19,7 @@
             {% endif %}
             </div>
         </div>
-        <div class="col-md-12">
+        <div>
             {% if user.is_authenticated %}
             {% for thread in subject.threads.all %}
                 {% include "thread_item.html" %}
